feat(practice): implement practice session with answer labels and stats
- add StatsService and PracticeSettingsService injection to PracticeView
- start default practice session with configurable card count and random order
- replace correct/incorrect buttons with know/repeat/hard buttons and track labeled answers
- track session time, answer delays, known and failed cards for statistics
- show detailed session completion info and option to retry failed cards
- update UI layout, card container size and button styles accordingly

feat(deskview): add known cards toggle and progress reset